# cpp_white

./: CMakeLists.txt  main.cpp  test.cpp  test2.cpp  text.txt
final_asignment/: solution.cpp
week_1/assignment_4/: main.cpp
week_1/assignment_5/: main.cpp
week_1/assignment_6/: main.cpp
week_1/assignment_7/: main.cpp
week_1/assignment_8/: main.cpp
week_1/assignment_9/: main.cpp
week_2/assignment_1/: main.cpp
week_2/assignment_10/: concerns.cpp  main.cpp
week_2/assignment_11/: main.cpp
week_2/assignment_12/: capitals.cpp  main.cpp
week_2/assignment_13/: buses1.cpp
week_2/assignment_14/: buses2.cpp
week_2/assignment_15/: unique.cpp
week_2/assignment_16/: main.cpp  map_values.cpp
week_2/assignment_17/: synonyms.cpp
week_2/assignment_18/: buses3.cpp
week_2/assignment_2/: isPalindrom.cpp  main.cpp
week_2/assignment_3/: PalindromFilter.cpp  main.cpp
week_2/assignment_4/: main.cpp  update_if_greater.cpp
week_2/assignment_5/: main.cpp  move_strings.cpp
week_2/assignment_6/: main.cpp  reverse.cpp
week_2/assignment_7/: main.cpp  reversed.cpp
week_2/assignment_8/: main.cpp  temperature.cpp
week_2/assignment_9/: main.cpp
week_3/assignment_1/: main.cpp
week_3/assignment_2/: sort_no_case.cpp
week_3/assignment_3/: sorted_strings.cpp
week_3/assignment_4/: main.cpp  names1.cpp
week_3/assignment_5/: main.cpp  names2.cpp
week_3/assignment_6/: main.cpp  reversible_string.cpp
week_3/assignment_7/: main.cpp  names3.cpp
week_3/assignment_8/: incognizable.cpp  main.cpp
week_4/assignment_1/: main.cpp  structures.cpp
week_4/assignment_10/: rational_throw.cpp
week_4/assignment_11/: rational_calc.cpp
week_4/assignment_12/: time_server.cpp
week_4/assignment_2/: invertible_function.cpp  main.cpp
week_4/assignment_3/: invertible_function_with_mul.cpp  main.cpp
week_4/assignment_4/: main1.cpp  main2.cpp
week_4/assignment_5/: main.cpp
week_4/assignment_6/: main.cpp
week_4/assignment_7/: main.cpp
week_4/assignment_8/: main.cpp  rational_eq_add_sub.cpp  rational_interface.cpp  rational_io.cpp  rational_map.cpp  rational_mul_div.cpp
week_4/assignment_9/: ensure_equal.cpp
