cmake_minimum_required(VERSION 3.10)
project(cpp_white)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_white main.cpp)
add_executable(week_1_assignment_4 week_1/assignment_4/main.cpp)
add_executable(week_1_assignment_5 week_1/assignment_5/main.cpp)
add_executable(week_1_assignment_6 week_1/assignment_6/main.cpp)
add_executable(week_1_assignment_7 week_1/assignment_7/main.cpp)
add_executable(week_1_assignment_8 week_1/assignment_8/main.cpp)
add_executable(week_1_assignment_9 week_1/assignment_9/main.cpp)
add_executable(week_2_assignment_1 week_2/assignment_1/main.cpp)
add_executable(week_2_assignment_2 week_2/assignment_2/main.cpp week_2/assignment_2/isPalindrom.cpp)
add_executable(week_2_assignment_3 week_2/assignment_3/main.cpp week_2/assignment_3/PalindromFilter.cpp)
add_executable(week_2_assignment_4 week_2/assignment_4/main.cpp week_2/assignment_4/update_if_greater.cpp)
add_executable(week_2_assignment_5 week_2/assignment_5/main.cpp week_2/assignment_5/move_strings.cpp)
add_executable(week_2_assignment_6 week_2/assignment_6/main.cpp week_2/assignment_6/reverse.cpp)
add_executable(week_2_assignment_7 week_2/assignment_7/main.cpp week_2/assignment_7/reversed.cpp)
add_executable(week_2_assignment_8 week_2/assignment_8/main.cpp week_2/assignment_8/temperature.cpp)
add_executable(week_2_assignment_9 week_2/assignment_9/main.cpp)
add_executable(week_2_assignment_10 week_2/assignment_10/concerns.cpp)
add_executable(week_2_assignment_11 week_2/assignment_11/main.cpp)
add_executable(week_2_assignment_12 week_2/assignment_12/capitals.cpp)
add_executable(week_2_assignment_13 week_2/assignment_13/buses1.cpp)
add_executable(week_2_assignment_14 week_2/assignment_14/buses2.cpp)
add_executable(week_2_assignment_15 week_2/assignment_15/unique.cpp)
add_executable(week_2_assignment_16 week_2/assignment_16/map_values.cpp week_2/assignment_16/main.cpp)
add_executable(week_2_assignment_17 week_2/assignment_17/synonyms.cpp)
add_executable(week_2_assignment_18 week_2/assignment_18/buses3.cpp)
add_executable(week_3_assignment_3 week_3/assignment_3/sorted_strings.cpp)